--- a/day11/Makefile
+++ b/day11/Makefile
@@ -4,7 +4,8 @@ CXX = g++
 CXX_FLAGS = -Wall -Werror -std=c++17 -O2
 CXX_DEBUG_FLAGS = -Wall -Werror -std=c++17 -g
 CXX_PROFILE_FLAGS = -Wall -Werror -std=c++17 -pg
-LIBS =
+INCLUDES =
+LIBS = -lgmpxx -lgmp
 BIN = bin
 
 default: p1r p2r
@@ -12,15 +13,15 @@ all: p1 p1r p1g p1p p2 p2r p2g p1p
 
 %: %.cpp
 	mkdir -p ${BIN}
-	$(CXX) $(CXX_FLAGS) $< -o ${BIN}/$@ ${LIBS}
+	$(CXX) $(CXX_FLAGS) ${INCLUDES} $< -o ${BIN}/$@ ${LIBS}
 
 %.nostrip: %.cpp
 	mkdir -p ${BIN}
-	$(CXX) $(CXX_DEBUG_FLAGS) $< -o ${BIN}/$@ ${LIBS}
+	$(CXX) $(CXX_DEBUG_FLAGS) ${INCLUDES} $< -o ${BIN}/$@ ${LIBS}
 
 %.prof: %.cpp
 	mkdir -p ${BIN}
-	$(CXX) $(CXX_PROFILE_FLAGS) $< -o $(BIN)/$@ ${LIBS}
+	$(CXX) $(CXX_PROFILE_FLAGS) ${INCLUDES} $< -o $(BIN)/$@ ${LIBS}
 
 p1 : puzzle1
 p2 : puzzle2
