--- a/day11/Makefile
+++ b/day11/Makefile
@@ -5,7 +5,7 @@ CXX_FLAGS = -Wall -Werror -std=c++17 -O2
 CXX_DEBUG_FLAGS = -Wall -Werror -std=c++17 -g
 CXX_PROFILE_FLAGS = -Wall -Werror -std=c++17 -pg
 INCLUDES =
-LIBS = -lgmpxx -lgmp
+LIBS =
 BIN = bin
 
 default: p1r p2r
